src/objects/Credential__c.object
<CustomObject>
    <description>Tracking for staff credentials such as tenure, cpr certification, etc</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The staff member to which this credential is associated</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Credentials</relationshipLabel>
        <relationshipName>Credentials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <description>The date in which this credential will no longer be valid</description>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grade_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The grade level to which this credential is applicable, if any. Its actually a lookup to the account that represents the grade level (Grade Level recordtype)</description>
        <label>Grade Level</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Credentials</relationshipLabel>
        <relationshipName>Credentials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Issuance_Date__c</fullName>
        <description>The date this credential was issues</description>
        <label>Issuance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Teaching_Credential_Description__c</fullName>
        <description>The category of the Teaching Credential (EdFi requirement)</description>
        <label>Teaching Credential Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The type of credential earned</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Certification</fullName>
                </value>
                <value>
                    <fullName>License</fullName>
                </value>
                <value>
                    <fullName>Tenure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Credential</label>
    <nameField>
        <label>Credential Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credentials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>